2001-12-25  WATANABE Katsuyuki <katsuyuki_1.watanabe@toppan.co.jp>
	
	* [w3m-dev 02714] 
	* scripts/w3mhelp.cgi.in: $helpdir should be handled by cygwin_pathconv
		when $CYGPATH=1

2001-12-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02715] bugfix in scripts/multipart/multipart.cgi.in
	* scripts/multipart/multipart.cgi: fix "use NKF" check

2001-12-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02719] (based on [w3m-dev 02708] comments)
	* resize_hook: set resized flag only
	* main.c (MAIN): in key input loop, process resize 
		when resized flag is set

2001-12-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02702] fix problem with emacs-w3m in [w3m-dev 02699]
	* main.c (MAIN): remove some flag initialization, its too early?
		this code caused problem with emacs-w3m.

2001-12-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02700] search refactoring
	* based on http://www.nmn.jp/~hidai/software/w3m/
	* fm.h: add SR_* constants, result value for search
	* main.c (srchcore): added
	* main.c (disp_srchresult): added
	* main.c (srch): added
	* main.c (srchfor): use srch()
	* main.c (srchbak): use srch()
	* main.c (srch_nxtprv): use srchcore() & disp_srch_result()
	* search.c (forwardSearch): return SR_* result value
	* search.c (backwardSearch): ditto

2001-12-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02699] initialization too late
	* main.c (MAIN): initializations moved before arg processing
	* debian bug closes: Bug##102445: ignores SIGWINCH while downloading

2001-12-22  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02696]
	* configure: fix bashism of w3mhelp-{lynx,w3m}_{en,ja} expansion

2001-12-22  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>

	* [w3m-dev 02687] version number in w3mhelp-*.html (+[w3m-dev 02689])
	* configure (cur_ver): w3mhelp*.html version subst
	* w3mhelp*.html: deleted
	* w3mhelp*.html.in: added

2001-12-22  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02682]
	* doc/README: remove README.dj