@@ -1,3 +1,9 @@
+2001-12-25  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02721]
+	* main.c (resize_handler): added
+	* main.c (MAIN): use resize_handler in getch()
+
 2001-12-25  WATANABE Katsuyuki <katsuyuki_1.watanabe@toppan.co.jp>
 	
 	* [w3m-dev 02714] 
@@ -1481,4 +1487,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.167 2001/12/25 09:16:23 ukai Exp $
+$Id: ChangeLog,v 1.168 2001/12/25 09:59:38 ukai Exp $
